test/tests/operators/from_amazon_cloudwatch/validation/error_invalid_group_name.txt
error: invalid CloudWatch log group name
 --> tests/operators/from_amazon_cloudwatch/validation/error_invalid_group_name.tql:5:24
  |
5 | from_amazon_cloudwatch "bad:group", mode="search"
  |                        ^^^^^^^^^^^ 
  |
  = hint: log group names may only contain `.`, `-`, `_`, `/`, `#`, letters, and digits
